# libbun

./: .gitignore  BUN_SOURCE_COMMIT  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release-native-plugin.yml  verify-linux-pic-plugin.yml
docs/: ADR-2033-LIBBUN-EMBEDDING-FACADE-SIBLING-REPOSITORY-AND-NON-CLI-BUN-HOSTING.md  ADR-2034-LIBBUN-PREPARED-BUNDLE-ARTIFACT-CONTRACT.md  ADR-2035-LIBBUN-HOST-OWNED-OUTPUT-AND-LOG-SINKS.md  ADR-2036-LIBBUN-DEDICATED-BUN-INTERNAL-LOG-STREAM.md  ADR-2037-LIBBUN-HOST-ENVIRONMENT-OVERLAY.md  ADR-2041-LIBBUN-MATURE-PUBLICATION-AND-DOWNSTREAM-CONSUMPTION-SHAPE.md  ADR-2042-LIBBUN-LINUX-PIC-NATIVE-PLUGIN-INPUTS.md  ADR-2044-LIBBUN-LINUX-HELPER-BACKED-NATIVE-RUNTIME.md  ADR-2045-LIBBUN-LINUX-RELEASE-MATRIX-AND-HELPER-BUNDLE.md  ADR-2047-LIBBUN-DOWNLOAD-PLUGIN-BUILD-FEATURE.md  ADR-2048-LIBBUN-LINUX-PIC-IN-PROCESS-PROMOTION-GATES.md  ADR-2049-BUNDLED-PLUGIN-AND-FILE-FREE-RUNTIME.md  ADR-2050-LIBBUN-SETTLED-PROVIDER-CALLS-AND-QUARANTINED-ASYNC-EMBEDDING.md  LIBBUN-LINUX-NATIVE-RELOCATION-DIAGNOSTICS.md
docs/done/: ADR-2033-LIBBUN-EMBEDDING-FACADE-SIBLING-REPOSITORY-AND-NON-CLI-BUN-HOSTING.md  ADR-2034-LIBBUN-PREPARED-BUNDLE-ARTIFACT-CONTRACT.md  ADR-2035-LIBBUN-HOST-OWNED-OUTPUT-AND-LOG-SINKS.md  ADR-2036-LIBBUN-DEDICATED-BUN-INTERNAL-LOG-STREAM.md  ADR-2037-LIBBUN-HOST-ENVIRONMENT-OVERLAY.md  ADR-2038-LIBBUN-DYNAMIC-PLUGIN-ONLY-DOWNSTREAM-CONSUMPTION.md  ADR-2039-LIBBUN-NATIVE-PLUGIN-LGPL-COMPLIANCE-PACKAGE.md  ADR-2040-LIBBUN-NATIVE-DEPENDENCY-LICENSE-INVENTORY.md  ADR-2043-LIBBUN-REPRODUCIBLE-VENDORED-BUN-SOURCE.md  ADR-2044-LIBBUN-LINUX-HELPER-BACKED-NATIVE-RUNTIME.md  ADR-2045-LIBBUN-LINUX-RELEASE-MATRIX-AND-HELPER-BUNDLE.md  ADR-2046-LIBBUN-RELEASED-NATIVE-PLUGIN-RESOLUTION.md  ADR-2047-LIBBUN-DOWNLOAD-PLUGIN-BUILD-FEATURE.md  ADR-2048-LIBBUN-LINUX-PIC-IN-PROCESS-PROMOTION-GATES.md  ADR-2049-BUNDLED-PLUGIN-AND-FILE-FREE-RUNTIME.md  ADR-2050-LIBBUN-SETTLED-PROVIDER-CALLS-AND-QUARANTINED-ASYNC-EMBEDDING.md  ADR-2051-LIBBUN-HANG-DIAGNOSTICS-AND-RELEASE-ARTIFACT-DEBUGGABILITY.md  ADR-2052-LIBBUN-PRODUCTION-PROVIDER-HANG-DIAGNOSTIC-CONTRACT.md  ADR-2053-LIBBUN-RETAINED-BACKEND-AND-AFFINE-INVOCATION-LEASES.md
docs/historic/: ADR-2041-LIBBUN-MATURE-PUBLICATION-AND-DOWNSTREAM-CONSUMPTION-SHAPE.md  ADR-2042-LIBBUN-LINUX-PIC-NATIVE-PLUGIN-INPUTS.md  ADR-2044-LIBBUN-LINUX-HELPER-BACKED-NATIVE-RUNTIME.md  ADR-2045-LIBBUN-LINUX-RELEASE-MATRIX-AND-HELPER-BUNDLE.md  ADR-2046-LIBBUN-RELEASED-NATIVE-PLUGIN-RESOLUTION.md
native/: Cargo.toml  build.rs
native/src/: lib.rs
native/tests/: native_output_policy.rs  native_prepared_bundle.rs  native_runtime.rs
patches/vendored-bun/: 0001-add-libbun-native-plugin-pic-build-mode.patch  0002-export-call-frame-describe-frame-in-release.patch  README.md
plugin/: Cargo.toml  build.rs
plugin/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: main.rs
scripts/: apply-vendored-bun-patches.sh  assert-distributable-native-link.sh  assert-no-static-link-assets.sh  check-vendored-bun-rust.sh  configure-vendored-bun.sh  create-native-plugin-release.sh  fetch-webkit-pic-artifact.sh  inspect-linux-native-relocations.sh  package-native-plugin-release.sh  preflight-native-plugin-release.sh  prepare-native-bun-link.sh  stage-vendored-bun-source.sh  update-plugin-checksums.sh  update-vendored-bun.sh  vendor-bun-deps.sh  verify-release-assets.sh  verify-vendored-bun-reproducible.sh  verify-vendored-bun.sh
src/: dynamic.rs  helper_protocol.rs  lib.rs  plugin_checksums.rs  plugin_checksums_table.in  release.rs  retained_backend.rs
tests/: conformance.rs  dynamic_conformance.rs  dynamic_plugin.rs  release.rs
