[package]
name = "libbun"
version = "0.2.2"
edition = "2024"
description = "Rust facade for hosting JavaScript and TypeScript providers through a replaceable Bun native plugin"
license = "Apache-2.0"
repository = "https://github.com/enki/libbun"
homepage = "https://github.com/enki/libbun"
readme = "README.md"
keywords = ["bun", "javascript", "typescript", "embedding", "plugin"]
categories = ["api-bindings", "development-tools::ffi"]
include = [
    "/BUN_SOURCE_COMMIT",
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/build.rs",
    "/src/**",
    "/src/plugin_checksums_table.in",
    "/tests/**",
]

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
libloading = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = { version = "0.4", optional = true }
thiserror = "2"
ureq = { version = "2", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
download-plugin = []
dynamic-loading = ["dep:libloading"]
plugin-installer = ["dep:tar", "dep:ureq", "dep:zstd"]
