[package]
name = "libbun-native"
version = "0.2.2"
edition = "2024"
license = "Apache-2.0"
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"
doctest = false

[features]
internal-adapter = []

[dependencies]
bun_ast = { path = "../vendor/bun/src/ast" }
bun_core = { path = "../vendor/bun/src/bun_core" }
bun_jsc = { path = "../vendor/bun/src/jsc" }
bun_platform = { path = "../vendor/bun/src/platform" }
bun_runtime = { path = "../vendor/bun/src/runtime" }
libbun = { path = ".." }
libc = "0.2"
serde_json = "1"
tempfile = "3"
url = "2"
