[package]
name = "libbun-plugin-native"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
doctest = false

[dependencies]
libbun = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
linux-in-process = ["dep:libbun-native"]

[target.'cfg(not(target_os = "linux"))'.dependencies]
libbun-native = { path = "../native", features = ["internal-adapter"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
libbun-native = { path = "../native", features = ["internal-adapter"], optional = true }
