[package]
name = "libbun-runtime-native"
version = "0.2.2"
edition = "2024"
license = "Apache-2.0"
publish = false
build = "build.rs"

[[bin]]
name = "libbun-runtime-native"
path = "src/main.rs"

[dependencies]
libbun = { path = ".." }
libbun-native = { path = "../native", features = ["internal-adapter"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
bun_platform = { path = "../vendor/bun/src/platform" }
